2005-04-20  Pino Toscano <toscano.pino@tiscali.it>

	* Give to the KSeg filter the ability to import names (called
	labels) of objects. This is not so perfect, because we need to
	decode better the read object label.

	* Fix intersection points loading in KSeg filter.

2005-04-16  Pino Toscano <toscano.pino@tiscali.it>

	* Fixing a small issue when saving a file with no name set. The
	name wasn't empty, but it contained a temp file. Luckly m_bTemp
	stores whether using a temp file. This could fix bug #98142.

2005-04-15  Pino Toscano <toscano.pino@tiscali.it>

	* Correct size for some menu item icons, as reported by Danny
	Allen.

	* Better handling of unexistant types found when loading a
	document.

	* Corrected two strings, thanks to Danny Allen.

	* Use KStdGuiItem in more places than before.

2005-04-14  Pino Toscano <toscano.pino@tiscali.it>

	* Committing fix for bug #100292. The new code makes the
	ObjectHierarchy construction from QDomElement more safe than
	before; the new "static constructor" and
	ObjectImpFactory::deserialize() can report an error in case of.

	* As a result of the fix, less assert() asre used in
	deserialization code.

2005-02-21  Pino Toscano <toscano.pino@tiscali.it>

	* Again, bump the version number to 0.10.

2005-02-10  Dominique Devriese  <devriese@kde.org>

	* The rest of a fix for bug #98517.  The problem was that
	namecalcer's weren't being saved if they weren't shown on the
	document.  This fixes the previous fix to not crash on faulty
	documents, but give a proper parser error.  This should
	permanently fix #98517.

	* Fix this ChangeLog to document the previous fix for #98517.

2005-02-07  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Bug fix: new algorithm for calcPath in calcpath.cc; the
	previous had exponential complexity for some examples

2005-02-03  Dominique Devriese  <devriese@kde.org>

	* Add a nice new locus example: trifolium-of-delongchamps.kig

2005-02-03  Pino Toscano <toscano.pino@tiscali.it>
