@@ -1,3 +1,10 @@
+2005-04-25  Pino Toscano <toscano.pino@tiscali.it>
+
+	* Almost rewritten a core part of the KSeg import filter: some
+	object are handled in a more correct way than before (thus less
+	crashes, but some crashes still occurs with locuses). As a result,
+	some objects can be imported correctly now.
+
 2005-04-20  Pino Toscano <toscano.pino@tiscali.it>
 
 	* Give to the KSeg filter the ability to import names (called
